# xmpp-client-rs

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  flake.nix  input.css  tailwind.config.js
public/: input.css
src/: lib.rs  main.rs  pages.rs  routes.rs
