[package]
name = "xmpp-client"
version = "0.1.0"
authors = ["RaySlash <stevemathewjoy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus-web = { version = "0.4" }
dioxus = { version = "0.4" }

dioxus-router = { version = "0.4", features = ["web"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

console_error_panic_hook = "0.1.7"
dioxus-free-icons = { version = "0.7.0", features = ["feather"] }
emojis = "0.6.1"
chrono = "0.4.33"

